@@ -1,15 +1,14 @@
 package nl.davydehaas.adventofcode.year2021.day01;
 
-import nl.davydehaas.adventofcode.year2021.Year2021;
-
 import java.util.ArrayList;
 import java.util.List;
 
-import static nl.davydehaas.adventofcode.utils.Utils.timeSolution;
+import static nl.davydehaas.adventofcode.util.Utils.readFile;
+import static nl.davydehaas.adventofcode.util.Utils.timeSolution;
 
-class Part2 extends Year2021 {
+class Part2 {
     
-    private static final List<String> INPUT = readFile("/day01.txt");
+    private static final List<String> INPUT = readFile(2021, 1);
     
     public static void main(String[] args) {
         timeSolution(Part2::calculate);
@@ -45,7 +44,7 @@ class Part2 extends Year2021 {
     
     private static int countLargerMeasurements(List<Integer> measurements) {
         int largerMeasurementCounter = 0;
-        int previousMeasurement = measurements.get(0);
+        int previousMeasurement = measurements.getFirst();
         
         for (int measurement : measurements) {
             if (measurement > previousMeasurement) {
