@@ -1,16 +1,15 @@
 package nl.davydehaas.adventofcode.year2021.day04;
 
-import nl.davydehaas.adventofcode.year2021.Year2021;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import static nl.davydehaas.adventofcode.utils.Utils.timeSolution;
+import static nl.davydehaas.adventofcode.util.Utils.readFile;
+import static nl.davydehaas.adventofcode.util.Utils.timeSolution;
 
-class Part1 extends Year2021 {
+class Part1 {
     
-    private static final List<String> INPUT = readFile("/day04.txt");
+    private static final List<String> INPUT = readFile(2021, 4);
     
     public static void main(String[] args) {
         timeSolution(Part1::calculate);
@@ -77,8 +76,7 @@ class Part1 extends Year2021 {
     }
     
     private static List<Integer> getCalledNumbers() {
-        return Arrays
-                .stream(INPUT.get(0).split(","))
+        return Arrays.stream(INPUT.getFirst().split(","))
                 .map(Integer::parseInt)
                 .toList();
     }
