@@ -1,17 +1,16 @@
 package nl.davydehaas.adventofcode.year2021.day06;
 
-import nl.davydehaas.adventofcode.year2021.Year2021;
-
 import java.math.BigInteger;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
-import static nl.davydehaas.adventofcode.utils.Utils.timeSolution;
+import static nl.davydehaas.adventofcode.util.Utils.readFile;
+import static nl.davydehaas.adventofcode.util.Utils.timeSolution;
 
-class Part2 extends Year2021 {
+class Part2 {
     
-    private static final List<String> INPUT = readFile("/day06.txt");
+    private static final List<String> INPUT = readFile(2021, 6);
     
     public static void main(String[] args) {
         timeSolution(Part2::calculate);
@@ -64,7 +63,7 @@ class Part2 extends Year2021 {
             lanternFishes.put(i, BigInteger.ZERO);
         }
         
-        Arrays.stream(INPUT.get(0).split(","))
+        Arrays.stream(INPUT.getFirst().split(","))
                 .map(Integer::parseInt)
                 .toList()
                 .forEach(timer -> lanternFishes.put(timer, lanternFishes.get(timer).add(BigInteger.ONE)));
